--- a/static/cesta.css
+++ b/static/cesta.css
@@ -47,10 +47,13 @@ body, html {
 
 /* Contenedor principal */
 .container {
-    text-align: center;
+    display: flex;
+    justify-content: flex-start;
     margin-top: 50px;
     font-size: 14px;
+    padding-left: 50px;
 }
+
 
 .message {
     font-weight: bold;
@@ -91,3 +94,48 @@ body, html {
     text-decoration: underline;
 }
 
+
+
+.boton-comprar {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    border-radius: 4px;
+}
+
+.boton-comprar:hover {
+    background-color: #333;
+}
+
+.mensaje-compra {
+    color: green;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+
+.lista-cesta {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.item-cesta {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
+}
+
+.item-cesta img {
+    border-radius: 4px;
+}
