--- a/templates/cesta.html
+++ b/templates/cesta.html
@@ -67,6 +67,9 @@
                 </ul>
                 
 
+                <div class="total-cesta">
+                    Total: {{ total }} EUR
+                </div>                
 
                 <form method="POST" action="{{ url_for('comprar') }}">
                     <button class="boton-comprar" type="submit">Comprar</button>
