--- a/static/cesta.css
+++ b/static/cesta.css
@@ -148,3 +148,41 @@ body, html {
     font-weight: bold;
     font-size: 16px;
 }
+
+
+#ania
+.favoritos-vacio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 300px; /* o 100vh si quieres que ocupe toda la altura de la pantalla */
+    text-align: center;
+    color: #555;
+}
+
+.favoritos-vacio .message {
+    font-size: 1.4em;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.favoritos-vacio .info {
+    font-size: 1em;
+    color: #777;
+}
+
+
+form button {
+    margin-top: 10px;
+    padding: 8px 12px;
+    border: none;
+    background-color: #f1f1f1;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+form button:hover {
+    background-color: #ddd;
+}
