--- a/static/style.css
+++ b/static/style.css
@@ -82,11 +82,13 @@ a{
     width: 100%;
 
 
+
 }
 
 .video video {
 
     width: 70%;
+    height: 70vh;
     
 
 }
@@ -118,8 +120,8 @@ a{
 
     position: fixed;
     
-    padding: 5px;
-    padding-top: 120px;
+    padding: 55px;
+    padding-top: 180px;
     transition: 0.6s;
     transform: translateX(-2vw);
     pointer-events: none;
@@ -292,4 +294,30 @@ h2{
 a.product-link {
     color: inherit;
     text-decoration: none;
+}
+
+.ver-todo:hover{
+    text-decoration: underline;
+}
+
+.categoria{
+    margin-top: 15px;
+    transition: 0.2s;
+    
+}
+
+.categoria:hover{
+    transform: translateX(10px);
+}
+
+.categoria>a{
+    font-size: 1.5rem;
+    font-weight: 300;
+    font-family: "Helvetica Neue";
+
+}
+
+.categoria>a:hover{
+    
+    text-decoration: underline;
 }
