--- a/static/cesta.css
+++ b/static/cesta.css
@@ -186,3 +186,15 @@ form button {
 form button:hover {
     background-color: #ddd;
 }
+
+.mensaje-compra {
+    padding: 10px 20px;
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+    border-radius: 5px;
+    margin: 20px auto;
+    max-width: 400px;
+    text-align: center;
+    font-weight: bold;
+}
