--- a/templates/favoritos.html
+++ b/templates/favoritos.html
@@ -58,8 +58,11 @@
     
                             <!-- Botón para añadir a la cesta -->
                             <form action="{{ url_for('mover_a_cesta', producto_id=item.id) }}" method="POST" style="margin-top: 10px;">
+                                <input type="hidden" name="talla" value="{{ item.talla }}">
+                                <input type="hidden" name="cantidad" value="{{ item.cantidad or 1 }}">
                                 <button type="submit">Añadir a la cesta</button>
                             </form>
+                            
                         </div>
                     </li>
                 {% endfor %}
