--- a/static/cesta.css
+++ b/static/cesta.css
@@ -72,7 +72,7 @@ body, html {
 }
 
 #cesta:target, #favoritos:target {
-    display: block; /* Muestra solo la que está en la URL */
+    display: block; 
 }
 
 /* Para que por defecto se vea la CESTA */
@@ -84,7 +84,7 @@ body, html {
 .menu-options a {
     text-decoration: none;
     color: black;
-    font-size: 12px; /* Letras más pequeñas */
+    font-size: 12px; 
     padding: 5px 10px;
     cursor: pointer;
 }
@@ -150,7 +150,6 @@ body, html {
 }
 
 
-#ania
 .favoritos-vacio {
     display: flex;
     flex-direction: column;
