--- a/static/style.css
+++ b/static/style.css
@@ -254,7 +254,7 @@ h2{
 
 .product-img {
     width: 100%;
-    height: 300px; /* Altura fija para uniformidad */
+    height: 300px; 
     display: flex;
     align-items: center;
     justify-content: center;
