--- a/templates/login-select.html
+++ b/templates/login-select.html
@@ -29,10 +29,10 @@
         </div>
         <div class="logo"><a href="./"><img src="../static/img/logo_zara.svg" alt=""></a></div>
         <nav class="menu">
-            <a href="#">BUSCAR</a>
+            <a href="./">PRODUCTOS</a>
             <a href="{{ url_for('loginselect') }}" class="active">INICIAR SESIÓN</a>
             <a href="{{ url_for('ayuda') }}">AYUDA</a>
-            <a href="{{ url_for('cesta') }}">CESTA[0]</a>
+            <a href="{{ url_for('cesta') }}">CESTA</a>
         </nav>
     </header>
 
