--- a/static/cesta.css
+++ b/static/cesta.css
@@ -1,11 +1,4 @@
-/* Reset básico */
-body, html {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background: white;
-    color: black;
-}
+
 
 .header {
     display: flex;
@@ -15,12 +8,6 @@ body, html {
 }
 
 
-/* Barra de búsqueda */
-.search-bar {
-    border-bottom: 1px solid black;
-    margin-left: auto;
-    margin-right: 150px; 
-}
 
 .search-bar input {
     border: none;
@@ -51,7 +38,7 @@ body, html {
     justify-content: flex-start;
     margin-top: 50px;
     font-size: 14px;
-    padding-left: 50px;
+    padding-inline: 0 !important;
 }
 
 
@@ -90,7 +77,6 @@ body, html {
 }
 
 .menu-options a:hover, .menu-options a:target {
-    font-weight: bold;
     text-decoration: underline;
 }
 
