--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="logo"><a href="./"><img src="../static/img/logo_zara.svg" alt=""></a></div>
         <nav class="menu">
-            <a href="#">BUSCAR</a>
+            <a href="#productos">PRODUCTOS</a>
             {% if session.user_id %}
                 <a href="{{ url_for('cuenta') }}">CUENTA</a>
             {% else %}
@@ -39,7 +39,7 @@
 
             
             <a href="{{ url_for('ayuda') }}">AYUDA</a>
-            <a href="{{ url_for('cesta') }}">CESTA[0]</a>
+            <a href="{{ url_for('cesta') }}">CESTA</a>
         </nav>
     </header>
 
@@ -52,7 +52,7 @@
         </div>
 
         
-        <hr>
+        <hr id="productos">
         <section class="productos">
             <h2>Productos
 
